add jvmargs and retention tests