@@ -112,6 +112,7 @@ tasks {
 
         classpath = project.sourceSets.main.get().runtimeClasspath
         mainClass.set("net.runelite.deob.Deob")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
         args = listOf(
             "${System.getProperty("user.home")}/gamepack/gamepack_"+ProjectVersions.rsversion.toString()+".jar",
             "$buildDir/libs/deobfuscated-$version.jar"
@@ -124,6 +125,7 @@ tasks {
 
         classpath = project.sourceSets.main.get().runtimeClasspath
         mainClass.set("net.runelite.deob.updater.UpdateMappings")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
         args = listOf(
             "${buildDir.toString().replace("deobfuscator", "runescape-client")}/libs/runescape-client-$version.jar",
             "$buildDir/libs/deobfuscated-$version.jar",
