@@ -50,6 +50,7 @@ tasks {
 
         classpath = project.sourceSets.main.get().runtimeClasspath
         mainClass.set("net.runelite.data.App")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
         args(listOf("npcStats", rootProject.file("./runelite-client/src/main/resources/").absolutePath))
         jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
     }
@@ -59,6 +60,7 @@ tasks {
 
         classpath = project.sourceSets.main.get().runtimeClasspath
         mainClass.set("net.runelite.data.App")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
         args(listOf("itemStats", rootProject.file("./runelite-client/src/main/resources/").absolutePath))
         jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
     }
@@ -68,6 +70,7 @@ tasks {
 
         classpath = project.sourceSets.main.get().runtimeClasspath
         mainClass.set("net.runelite.data.App")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
         args(listOf("itemLimits", rootProject.file("./runelite-client/src/main/resources/").absolutePath))
         jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
     }
